Fixing some layout issues and syntax of html to be valid

--- a/css/styles.css
+++ b/css/styles.css
@@ -145,6 +145,10 @@ a {
   padding-left: 0;
 }
 
+.list__item {
+  margin: 1rem 0;
+}
+
 .list--inline .list__item {
   display: inline-block;
   margin-right: 2rem;
@@ -211,7 +215,7 @@ a {
   font-weight: 600;
   margin: 1rem 0;
   outline: 0;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw;
   text-align: center;
   text-transform: uppercase;
   white-space: nowrap;
@@ -263,8 +267,8 @@ a {
 }
 
 .btn--stretched {
-  padding-left: 10rem;
-  padding-right: 10rem;
+  padding-left: 8vw;
+  padding-right: 8vw;
 }
 
 .btn--block {
@@ -275,6 +279,10 @@ a {
 @media screen and (min-width: 1024px) {
   .btn {
     font-size: 1.5rem;
+  }
+  .btn--stretched {
+    padding-left: 10rem;
+    padding-right: 10rem;
   }
 }
 
@@ -303,6 +311,7 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 1.5rem 2rem;
+  width: 0;
 }
 
 .input-group .btn {
@@ -323,9 +332,18 @@ a {
   overflow: hidden;
 }
 
+.card__header {
+  font-size: 4rem;
+  font-weight: 600;
+}
+
+.card__body {
+  font-size: 2.4rem;
+}
+
 .card__header,
 .card__body {
-  padding: 2rem 3rem;
+  padding: 1rem 3rem;
 }
 
 .card--primary .card__header {
@@ -382,10 +400,6 @@ a {
   letter-spacing: 1px;
 }
 
-.plan--popular {
-  transform: scale(1.1);
-}
-
 .plan--popular .card__header {
   position: relative;
 }
@@ -399,15 +413,19 @@ a {
   right: 5%;
 }
 
-.plan:hover {
-  transform: scale(1.05);
-}
-
-.plan--popular:hover {
-  transform: scale(1.15);
-}
-
 @media screen and (min-width: 1024px) {
+  .plan:hover {
+    transform: scale(1.05);
+  }
+
+  .plan--popular {
+    transform: scale(1.1);
+  }
+
+  .plan--popular:hover {
+    transform: scale(1.15);
+  }
+
   .plan__name {
     font-size: 1.4rem;
   }
@@ -766,8 +784,9 @@ a {
 }
 
 .block-domain__prices {
+  color: var(--color-headings);
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 6rem);
   font-size: 2rem;
   font-weight: 600;
@@ -849,7 +868,13 @@ a {
 /* Footer */
 
 .footer {
+  margin-top: 26rem;
   background: #232323;
+}
+
+.footer__start {
+  position: relative;
+  bottom: 20rem;
 }
 
 .footer a {
